--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>Amira-MPLScollege's main index page</h1>
 
 <a href="/mctc-html-css1/"> Link to Html/css1</a>
-<a href="/client-side-scripting/"> Link to Client side scripting</a>
+<a href="/Client-Side-Scripting"/> Link to Client side scripting</a>
