--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 
 <a href="/mctc-html-css1/"> Link to Html/css1</a>
 <a href="/Client-Side-Scripting/"> Link to Client side scripting</a>
+<a href="/mctc-html-css2/"> Link to Html & CSS 2</a>
